--- a/frontend-cemos/public/assets/content/politica/7-economia-azul/1.md
+++ b/frontend-cemos/public/assets/content/politica/7-economia-azul/1.md
@@ -4,43 +4,35 @@
 **Frederico Medeiros Vasconcelos de Albuquerque**  
 **Rodrigo de Campos Carvalho**
 
----
-
-> *Vou resgatar aqui a famosa conferência de Thomas Huxley, em 1883, frente à Real Sociedade Britânica, quando ele foi incumbido de entender o porquê do declínio das pescarias nas águas britânicas. Naqueles anos, a tecnologia pesqueira era muito menos avançada do que a presente.*  
-> *No entanto, ele estava convencido de que não havia por que ter preocupação sobre a sustentabilidade dessa exploração. E disse assim — ‘não importa o que o homem faça ao mar, suas riquezas são inesgotáveis’.*  
-> *Isso foi em 1883, uma expressão de uma autoridade como Huxley que, diga-se de passagem, foi o grande mentor de Darwin. No entanto, esse equívoco de Huxley permaneceu presente durante várias décadas.*  
-> *Ainda hoje existe certa convicção de que os recursos do mar são inesgotáveis, que eles são tão numerosos e tão abrangentes que não importa o que façamos com eles, eles estarão sempre presentes.*
-
-**(Jorge Pablo Castelo, Professor Doutor da Universidade Federal do Rio Grande, FURG – Mesa Redonda 3 – VIII EBERI, outubro de 2021)**
-
----
+*Vou resgatar aqui a famosa conferência de Thomas Huxley, em 1883, frente à Real Sociedade Britânica, quando ele foi incumbido de entender o porquê do declínio das pescarias nas águas britânicas. Naqueles anos, a tecnologia pesqueira era muito menos avançada do que a presente.
+No entanto, ele estava convencido de que não havia por que ter preocupação sobre a sustentabilidade dessa exploração. E disse assim — ‘não importa o que o homem faça ao mar, suas riquezas são inesgotáveis’.
+Isso foi em 1883, uma expressão de uma autoridade como Huxley que, diga-se de passagem, foi o grande mentor de Darwin. No entanto, esse equívoco de Huxley permaneceu presente durante várias décadas.*
+Ainda hoje existe certa convicção de que os recursos do mar são inesgotáveis, que eles são tão numerosos e tão abrangentes que não importa o que façamos com eles, eles estarão sempre presentes.
+(Jorge Pablo Castelo, Professor Doutor da Universidade Federal do Rio Grande, FURG – Mesa Redonda 3 – VIII EBERI, outubro de 2021)
 
 ## 1. Introdução
 
-Utilizar o mar para **abertura de oportunidades no futuro do país**, bem como **amenizar a escassez de recursos naturais**, **ampliar o bem-estar da população**, **melhorar a qualidade de vida dos trabalhadores ligados diretamente ao mar** e **gerar empregos** são questões de **tomada de decisão dos decisores políticos** que afetam o presente e os anos vindouros.
+Utilizar o mar para abertura de oportunidades no futuro do país, bem como amenizar a escassez de recursos naturais, ampliar o bem-estar da população,*melhorar a qualidade de vida dos trabalhadores ligados diretamente ao mar e gerar empregos são questões de tomada de decisão dos decisores políticos que afetam o presente e os anos vindouros.
 
-O mar pode trazer **enormes oportunidades de desenvolvimento político, econômico e social** que não podem ser negligenciadas pelo governo. Segundo o estrategista naval e geopolítico **Mahan**, em seu clássico livro de 1890, *“The Influence of Sea Power upon History (1660–1783)”*, ao abordar os **aspectos geopolíticos** de sua teoria para o **desenvolvimento de potências marítimas** Afirmava que os governos deveriam canalizar seus esforços, em tempos de paz, para o **desenvolvimento econômico** (principalmente da indústria naval), a **aquisição de “portos seguros”**, como bases, entrepostos comerciais, e a **construção de uma marinha capaz de fazer frente a qualquer inimigo**.  
+O mar pode trazer enormes oportunidades de desenvolvimento político, econômico e social que não podem ser negligenciadas pelo governo. Segundo o estrategista naval e geopolítico **Mahan**, em seu clássico livro de 1890, *“The Influence of Sea Power upon History (1660–1783)”*, ao abordar os aspectos geopolíticos de sua teoria para o **desenvolvimento de potências marítimas**, afirmava que os governos deveriam canalizar seus esforços, em tempos de paz, para o **desenvolvimento econômico** (principalmente da indústria naval), a aquisição de **“portos seguros”**, como bases, entrepostos comerciais, e a **construção de uma marinha capaz de fazer frente a qualquer inimigo**.  
 
 Ademais, também cita a importância de possuir uma **população ligada ao comércio no mar**, pois buscaria ganhos materiais além do território nacional, **impulsionando o poder marítimo e naval** de seu país. Esses dois dos mais importantes elementos da **oceanopolítica de Mahan** permanecem atuais.  
 
 O **caráter do governo** e o **caráter da população** são fundamentais para a implementação de **políticas públicas, programas, projetos, planos e atividades** que fomentem o mar como fonte de sustento, desenvolvimento e riqueza e poder das **Nações costeiras** e de projeção oceânica, como é o caso do Brasil (VIOLANTE, 2016).  
 
----
-
-Os **oceanos** ocupam aproximadamente **71% da superfície da Terra** e estão intrinsecamente ligados à **sustentabilidade da vida no planeta**, oferecendo alternativas para grandes desafios globais, tais como:  
+Os oceanos ocupam aproximadamente 71% da superfície da Terra e estão intrinsecamente ligados à sustentabilidade da vida no planeta, oferecendo alternativas para grandes desafios globais, tais como:  
 - erradicação da fome;  
 - adaptação às alterações climáticas;  
 - diversificação das matrizes energéticas;  
-- aplicação de inovações tecnológicas provenientes da bioprospecção, com amplo espectro de aplicação (desde energia limpa até desenvolvimento de fármacos).  
+- aplicação de inovações tecnológicas provenientes da bioprospecção, com amplo espectro de aplicação, desde energia limpa até desenvolvimento de fármacos, etc.  
 
 A maioria das cidades mais populosas do mundo são **costeiras**.  
-O **Brasil** possui mais de **sete mil quilômetros de costa**, com cerca de **80% da população** morando até 200 km do litoral; **85% do consumo de energia** e **93% da produção industrial** localizam-se também até essa faixa.  
+O Brasil possui mais de **sete mil quilômetros de costa**, com cerca de **80% da população** morando até 200 km do litoral; **85% do consumo de energia** e **93% da produção industrial** localizam-se também até essa faixa.  
 Além disso, **95% das exportações** são transportadas pelo **modal marítimo**.  
 O Brasil detém **5,7 milhões de km² de jurisdição marítima**, chamadas de **águas jurisdicionais brasileiras (AJB)**, que se bem utilizadas podem **otimizar o uso da Economia Azul**, já que os recursos vivos e não vivos não são inesgotáveis.  
 
----
+Assim, este capítulo apresenta a relevância da elaboração de um **Planejamento Espacial Marinho (PEM) nacional** e as oportunidades para discussões em todas as áreas de atuação do mar — político-estratégica, social, econômica e ambiental.  
 
-Assim, este capítulo apresenta a **relevância da elaboração de um Planejamento Espacial Marinho (PEM) nacional** e as **oportunidades para discussões em todas as áreas de atuação do mar** — político-estratégica, social, econômica e ambiental.  
 De forma mais específica, esta pesquisa focou nos **aspectos econômicos ligados à Economia do Mar**, também chamada de **Economia Azul**.  
 
 Foram discutidos os tópicos:  
@@ -53,12 +45,9 @@ Foram discutidos os tópicos:
 - áreas de conhecimento que o PEM pode motivar;  
 - **perspectivas econômicas futuras**.  
 
----
-
 Por fim, constatou-se que a **elaboração e implementação do PEM no Brasil** poderá **contribuir para as gerações atuais e futuras** no desenvolvimento **sustentável e racional** baseado na **proteção, conservação e uso dos recursos naturais dos espaços marinhos**, sendo o PEM uma **ferramenta política e metodológica** essencial para o **fomento da Economia Azul**.  
 
-Além disso, pode-se estabelecer um **modelo cooperativo e integrativo** de ações com **países fronteiriços**, principalmente **Uruguai e França** (parte oceânica) e **Paraguai e Argentina** (parte fluvial), respeitando as particularidades de cada Estado nas questões marítimas.  
-O **Brasil** pode, assim, se firmar como **líder político e econômico** entre os países do **Atlântico Sul**, destacando a **dimensão transfronteiriça do PEM**.
+Ademais, pode-se estabelecer um **modelo cooperativo e integrativo** de ações com **países fronteiriços**, principalmente **Uruguai e França** (parte oceânica) e na parte fluvial com **Paraguai e Argentina**, resguardando as particularidades de cada Estado nas questões afetas aos mar que lhes pertencem. O **Brasil** pode ser um líder político e econômico aos paíes lindeiros do **Atlântico Sul** nesse processo, dada a dimensão **transfronteiriça do PEM**.
 
 ## 2. O que é Planejamento Espacial Marinho
 
@@ -72,7 +61,6 @@ Dada essa premissa, as atividades humanas podem ser **alocadas nas áreas marinh
 - Áreas de preservação;  
 - Usos específicos como parques eólicos, aquicultura *offshore* ou extração de areia (Ehler; Douvere, 2009).  
 
----
 
 ### Características de um PEM eficaz
 
@@ -84,8 +72,6 @@ Um PEM considerado eficaz deve ser:
 - **Adaptativo:** capaz de aprender com a experiência;  
 - **Estratégico e antecipatório:** com foco no longo prazo;  
 - **Participativo:** com partes interessadas ativamente envolvidas no processo.  
-
----
 
 ### O processo de implementação do PEM
 
@@ -101,8 +87,6 @@ Para a condução, desenvolvimento, implantação, monitoramento e avaliação d
 8. Implementar e fazer cumprir o *Plano de Gestão Espacial Marinho*;  
 9. Monitorar e avaliar o desempenho;  
 10. Adaptar o processo de gestão espacial marinho.  
-
----
 
 Cabe ressaltar que esses 10 passos **não representam um processo linear**.  
 Muitos **ciclos de retroalimentação (*feedback*)** devem ser integrados ao processo do PEM.  
@@ -130,18 +114,14 @@ Há que se atentar para as **interfaces que envolvem a superfície do mar** — 
 A **capacidade de desenvolvimento** dessas **três dimensões do mar** — superfície, submersa e aérea — é movida pela **tecnologia**.  
 Como percebe **Milton Santos (1994)**, a **ciência, tecnologia e informação**, presentes na base de utilização e funcionamento dos espaços, **assumem papel fundamental no mundo contemporâneo**.
 
----
 
 E nos **espaços marinhos** não poderia ser diferente.  
 Novos processos vitais são buscados, mas esbarram no uso de **técnicas sensíveis e disponíveis às potências centrais e empresas transnacionais**.  
 O **desenvolvimento sustentável** passa pelo investimento e aprimoramento tecnológico, integrando as relações **“Terra-Mar-Ar”** tanto em processos naturais quanto em **atividades socioeconômicas**, racionalizando usos e reduzindo impactos e ameaças a esse ecossistema.
 
----
 
 Nas últimas décadas, observa-se uma **migração intensa de atividades econômicas** antes terrestres para o mar.  
 Essa tendência é comprovada pelo avanço da **exploração *offshore*** de **petróleo e gás**, pela **geração de energias renováveis** (como substituição de hidrelétricas por dispositivos de energia de correntes marinhas e ondas ou campos de eólicas *onshore* por *offshore*), pela **aquicultura** (*onshore* → *offshore*), e até pela **agricultura**, com o rápido avanço da **algacultura**, focada no **cultivo de algas marinhas de alto valor econômico e nutricional**.
-
----
 
 Diante desse cenário, a maioria dos países **designou e zoneou seus respectivos espaços marinhos** para uma série de atividades humanas, tais como:
 - Transporte marítimo;  
@@ -158,8 +138,6 @@ Caso não se considere devidamente os impactos para as demais atividades humanas
 - **Conflitos entre usos humanos e o meio ambiente marinho** (*conflitos usuário-ambiente*).
 
 Esses conflitos **enfraquecem a capacidade dos oceanos de fornecer serviços ecossistêmicos** necessários aos seres humanos e aos demais seres vivos que habitam o planeta.
-
----
 
 Além disso, em circunstâncias como esta, **governantes e tomadores de decisão** são muitas vezes **reativos**, respondendo aos eventos **tarde demais**, em vez de **planejar e moldar ações** que poderiam levar a um **futuro mais desejável para o ambiente marinho**.
 
