--- a/frontend-cemos/public/assets/content/politica/8-ema-323/1.md
+++ b/frontend-cemos/public/assets/content/politica/8-ema-323/1.md
@@ -24,20 +24,11 @@ O diagrama, a seguir, indica as diversas atividades que a MB desempenha no cumpr
 
 | **Marinha do Brasil** | **Atividades**                           | **Ações Decorrentes**                                                                 |
 |------------------------|------------------------------------------|---------------------------------------------------------------------------------------|
-|                        | **Poder Marítimo**                       | Desenvolvimento do Poder Marítimo                                                    |
-|                        |                                          | Atribuições da Autoridade Marítima                                                   |
-|                        |                                          | Cooperação com o Desenvolvimento Nacional                                            |
-|                        | **Participação para a Sociedade Brasileira** | Mentalidade Marítima                                                                 |
-|                        |                                          | Defesa da Pátria                                                                     |
-|                        | **Atuação do Poder Naval**               | Nos oceanos, e no Atlântico Sul, principalmente                                     |
-|                        |                                          | Vias Fluviais e Águas Interiores                                                     |
-|                        |                                          | Garantia dos Poderes Constitucionais e da Lei e da Ordem                             |
-|                        | **Interesses Nacionais**                 | Salvaguarda de Pessoas e Interesses no Exterior                                      |
-|                        |                                          | Paz e Segurança Institucionais no Exterior                                           |
-|                        |                                          | Apoiar a Projeção do Brasil                                                          |
-|                        | **Ciência, Tecnologia e Inovação**       | Cooperação com o Desenvolvimento Nacional                                            |
-|                        |                                          | Defesa Biológica, Nuclear, Química e Radiológica                                     |
-|                        |                                          | Defesa Cibernética                                                                   |
+|                        | **Poder Marítimo**                       | Desenvolvimento do Poder Marítimo  <br> Atribuições da Autoridade Marítima <br> Cooperação com o Desenvolvimento Nacional                                            |
+|                        | **Participação para a Sociedade Brasileira** | Mentalidade Marítima <br> Defesa da Pátria                                                                     |
+|                        | **Atuação do Poder Naval**               | Nos oceanos, e no Atlântico Sul, principalmente Vias Fluviais e Águas Interiores <br> Garantia dos Poderes Constitucionais e da Lei e da Ordem                             |
+|                        | **Interesses Nacionais**                 | Salvaguarda de Pessoas e Interesses no Exterior <br> Paz e Segurança Institucionais no Exterior  <br> Apoiar a Projeção do Brasil                                                          |
+|                        | **Ciência, Tecnologia e Inovação**       | Cooperação com o Desenvolvimento Nacional <br> Defesa Biológica, Nuclear, Química e Radiológica <br> Defesa Cibernética                                                                   |
 
 A Política Naval orienta o planejamento estratégico da MB, cujo cumprimento impõe a disponibilidade de forças navais aptas a atuarem em consonância com a magnitude político-estratégica e econômica do Brasil no cenário internacional.
 
@@ -352,20 +343,20 @@ Essa distribuição tem o propósito de **transmitir, de modo objetivo, a forma 
 
 ### Mapa Estratégico da Marinha
 
-#### **Missão**
+**Missão**
 Preparar e empregar o **Poder Naval**, a fim de contribuir para:
 - A **Defesa da Pátria**;  
 - A **garantia dos poderes constitucionais** e, por iniciativa de qualquer destes, da **lei e da ordem**;  
 - O **cumprimento das atribuições subsidiárias** previstas em Lei;  
 - E para o **apoio à Política Externa**.
 
-#### **Visão de Futuro**
+**Visão de Futuro**
 A **Marinha do Brasil** será uma **Força moderna**, **aprestada e motivada**, com **alto grau de independência tecnológica**, compatível com a **estatura político-estratégica do Brasil** no cenário internacional.  
 Será capaz de **contribuir para a defesa da Pátria** e a **salvaguarda dos interesses nacionais**, no mar e em águas interiores, em **sintonia com os anseios da sociedade**.
 
 ---
 
-#### **Resultados para a Sociedade**
+**Resultados para a Sociedade**
 - Contribuir para a Defesa da Pátria  
 - Prover a Segurança Marítima  
 - Contribuir para a Garantia dos Poderes Constitucionais e da Lei e da Ordem  
@@ -374,7 +365,7 @@ Será capaz de **contribuir para a defesa da Pátria** e a **salvaguarda dos int
 
 ---
 
-#### **Processos**
+**Processos**
 - Modernizar a Força Naval  
 - Obter a Capacidade Operacional Plena  
 - Desenvolver a Capacidade Cibernética da MB  
@@ -383,7 +374,7 @@ Será capaz de **contribuir para a defesa da Pátria** e a **salvaguarda dos int
 
 ---
 
-#### **Institucional**
+**Institucional**
 - Aprimorar a Gestão de Pessoas  
 - Aperfeiçoar a Gestão Orçamentária, Financeira e Administrativa  
 
@@ -402,7 +393,7 @@ A visão de futuro traduz a situação desejada para a Marinha, expressando os f
 
 ---
 
-#### **Características da Visão de Futuro**
+**Características da Visão de Futuro**
 
 - **Moderna:**  
   Dispor de meios e sistemas tecnologicamente atualizados, aptos à condução das tarefas do Poder Naval nos ambientes da **guerra naval** (submarino, superfície, aéreo e anfíbio) e no **espaço cibernético**.
