--- a/frontend-cemos/public/assets/content/politica/aula-2022.md
+++ b/frontend-cemos/public/assets/content/politica/aula-2022.md
@@ -39,6 +39,8 @@ CAP 3- O CONCEITO DE ESTADO
 	A concepção de contrato segundo Thomas Hobbes (1588-	1679) 
 	O contrato segundo John Locke (1632 -1704) 
 	O contrato segundo Jean-Jacques Rousseau (1712-1778) 
+
+	✨  questão de associação das principais obras
 3.9 - O Estado como organização do poder 
 	A estrutura política do Estado 
 3.10 – A Institucionalização do poder 
