--- a/frontend-cemos/public/assets/content/politica/1-ciencia-politica/1.md
+++ b/frontend-cemos/public/assets/content/politica/1-ciencia-politica/1.md
@@ -58,11 +58,11 @@ No idioma inglês, por exemplo, podemos identificar vários significados para o 
 
 **Pág 17**
 
-1. Policy é entendido como ação do governo. Constitui atividade social que se propõe a assegurar, por meio da coerção física, baseada no direito, a segurança externa e a solidariedade interna de um território específico garantindo a ordem e providenciando ações que visam a atender às necessidades da sociedade. A política neste sentido é executada por um autoridade legitimada, que busca efetuar uma realocação dos recursos escassos da sociedade. A política neste caso pode ser adjetivada em função do campo de sua atuação ou de especialização da agência governamental encarregada de executá-la. Desse modo, podemos nos referir a política de educação, saúde, assistência social, agrícola, fiscal etc. São todas produtos de ações que têm efeitos no sistema político e social.
+ 1. Policy é entendido como ação do governo. Constitui atividade social que se propõe a assegurar, por meio da coerção física, baseada no direito, a segurança externa e a solidariedade interna de um território específico garantindo a ordem e providenciando ações que visam a atender às necessidades da sociedade. A política neste sentido é executada por um autoridade legitimada, que busca efetuar uma realocação dos recursos escassos da sociedade. A política neste caso pode ser adjetivada em função do campo de sua atuação ou de especialização da agência governamental encarregada de executá-la. Desse modo, podemos nos referir a política de educação, saúde, assistência social, agrícola, fiscal etc. São todas produtos de ações que têm efeitos no sistema político e social.
 
-2. Politics refere-se ao conjunto de interações que definem múltiplas estratégias entre atores para melhorar seu rendimento e alcançar certos objetivos. Desse modo, podemos nos referir à política de uma organização, de uma empresa, de um clube, de uma família ou de um grupo social específico. Também pode se referir à carreira profissional de um político, que por suas atitudes busca obter e ampliar sua influência. A dedicação à política, nesse sentido, remete a uma atividade que tem regras de jogo específicas (dinâmica partidária e eleitoral) e um estilo próprio (interesse pelo público e atributos de liderança).
+ 2. Politics refere-se ao conjunto de interações que definem múltiplas estratégias entre atores para melhorar seu rendimento e alcançar certos objetivos. Desse modo, podemos nos referir à política de uma organização, de uma empresa, de um clube, de uma família ou de um grupo social específico. Também pode se referir à carreira profissional de um político, que por suas atitudes busca obter e ampliar sua influência. A dedicação à política, nesse sentido, remete a uma atividade que tem regras de jogo específicas (dinâmica partidária e eleitoral) e um estilo próprio (interesse pelo público e atributos de liderança).
 
-3. Polity refere-se à política como sistema político, estrutura onde interagem vários elementos em função do poder. Os elementos que integram essa estrutura de disputa de poder que constitui o sistema político têm um caráter institucional, formalizado ou não (constituições, leis, normas e costumes), onde interagem os atores sociais, formalizados ou não (partidos políticos, grupos de pressão, movimentos sociais), coexistem num determinado período histórico e com uma cultura política específica, sofrem influência e são influenciados por outros subsistemas (econômico, social, cultural etc.).
+ 3. Polity refere-se à política como sistema político, estrutura onde interagem vários elementos em função do poder. Os elementos que integram essa estrutura de disputa de poder que constitui o sistema político têm um caráter institucional, formalizado ou não (constituições, leis, normas e costumes), onde interagem os atores sociais, formalizados ou não (partidos políticos, grupos de pressão, movimentos sociais), coexistem num determinado período histórico e com uma cultura política específica, sofrem influência e são influenciados por outros subsistemas (econômico, social, cultural etc.).
 
 Ao longo do século XX, com o aumento da complexidade das sociedades, e o aumento da capacidade de intervenção do homem possibilitado pelo formidável avanço das novas tecnologias, a política se torna ainda mais importante, necessitando da ampla participação nos processos de decisão que ocorrem nos diferentes âmbitos de poder, em particular no Estado.
 
@@ -74,7 +74,7 @@ Neste século XXI que está apenas começando, a política se insere em todos os
 
 Enfim, mais do que nunca torna-se necessário que a política seja compreendida pelo homem comum, tornando mais do que nunca atual a poesia de **Brecht**📌 “O analfabeto político”, que demonstra um tipo de ignorância que pode ser fatal na melhoria das condições de vida de cada cidadão. Nesse poema Brecht coloca que:
 
-*“O pior analfabeto é o analfabeto político, ele não ouve, não fala, nem participa dos acontecimentos políticos*. Ele ***não sabe que o custo da vida**, o preço do feijão, do peixe, da farinha, do aluguel, do sapato e do remédio **dependem das decisões políticas**. O analfabeto político é tão burro que se orgulha e estufa o peito dizendo que odeia a política. Não sabe o imbecil que, da sua ignorância política nasce a prostituta, o menor abandonado, e o pior de todos os bandidos, que é o político vigarista, pilantra, corrupto e lacaio das empresas nacionais e multinacionais.”
+*“O pior analfabeto é o analfabeto político, ele não ouve, não fala, nem participa dos acontecimentos políticos*. Ele **não sabe que o custo da vida**, o preço do feijão, do peixe, da farinha, do aluguel, do sapato e do remédio **dependem das decisões políticas**. O analfabeto político é tão burro que se orgulha e estufa o peito dizendo que odeia a política. Não sabe o imbecil que, da sua ignorância política nasce a prostituta, o menor abandonado, e o pior de todos os bandidos, que é o político vigarista, pilantra, corrupto e lacaio das empresas nacionais e multinacionais.”
 
 
 E nesse sentido que “a política merece ser altamente louvada”. Pois ela deve “constituir a preocupação do homem livre, e sua existência é a verificação da liberdade”.
@@ -227,8 +227,8 @@ A utilização da noção de sistema político no estudo dos fenômenos polític
 
 Levando-se em consideração essas limitações, Cerroni afirma que o estudo do sistema político deve ser feito com cuidado, “levando-se em conta que ele mesmo é o resultado de uma história geral e de uma específica história nacional e que, como tal, apenas no curto prazo funciona como sistema decisório por excelência”, enquanto nos períodos longos “opera no quadro de processos sociais e culturais que ultrapassam tanto os partidos quanto os indivíduos e estruturam novos contextos históricos”. Logo, deve-se ter o cuidado de não adotar uma ótica tecnicista que “pode levar a avaliações equivocadas ao sugerir utópicos modelos universais e ao considerar como inalterável o nosso próprio sistema político”.
 
-| Conceito | Significado Central | Características e Detalhes | Fontes |
-| :--- | :--- | :--- | :--- |
-| **Polity** | **Sistema Político (Estrutura)** | Refere-se à política como **sistema político**, uma estrutura onde interagem vários elementos em função do poder. Os elementos que integram essa estrutura têm um caráter institucional, formalizado ou não (como constituições, leis, normas e costumes). Nela interagem atores sociais, formalizados ou não (como partidos políticos, grupos de pressão e movimentos sociais). Coexiste em um determinado período histórico com uma cultura política específica e sofre influência de, e influencia, outros subsistemas (econômico, social, cultural, etc.). Parsons considera o conceito de *polity* como um **subsistema funcional primário** que deve guiar os estudos de ciência política. | |
-| **Politics** | **Conjunto de Interações e Processos** | Refere-se ao **conjunto de interações** que definem múltiplas estratégias entre atores para melhorar seu rendimento e **alcançar certos objetivos**. Pode ser empregado para se referir à política de uma organização, de uma empresa, de um clube, de uma família ou de um grupo social específico. Também pode se referir à **carreira profissional de um político** que busca obter e ampliar sua influência. A dedicação à *politics* envolve regras de jogo específicas (como dinâmica partidária e eleitoral) e um estilo próprio (interesse pelo público e atributos de liderança). | |
-| **Policy** | **Ação do Governo (Linha de Conduta)** | É entendido como a **ação do governo**. Constitui uma atividade social que se propõe a assegurar, por meio da coerção física baseada no direito, a **segurança externa e a solidariedade interna** de um território específico, garantindo a ordem e providenciando ações que visam atender às necessidades da sociedade. É executada por uma **autoridade legitimada**, que busca efetuar a **realocação dos recursos escassos** da sociedade. A política, neste sentido, pode ser adjetivada em função de seu campo de atuação ou da especialização da agência governamental (e.g., política de educação, saúde, fiscal). Os produtos dessas ações têm efeitos no sistema político e social. | |
+| Conceito | Significado Central | Características e Detalhes | 
+| :--- | :--- | :--- |
+| **Polity** | **Sistema Político (Estrutura)** | Refere-se à política como **sistema político**, uma estrutura onde interagem vários elementos em função do poder. Os elementos que integram essa estrutura têm um caráter institucional, formalizado ou não (como constituições, leis, normas e costumes). Nela interagem atores sociais, formalizados ou não (como partidos políticos, grupos de pressão e movimentos sociais). Coexiste em um determinado período histórico com uma cultura política específica e sofre influência de, e influencia, outros subsistemas (econômico, social, cultural, etc.). Parsons considera o conceito de *polity* como um **subsistema funcional primário** que deve guiar os estudos de ciência política. |
+| **Politics** | **Conjunto de Interações e Processos** | Refere-se ao **conjunto de interações** que definem múltiplas estratégias entre atores para melhorar seu rendimento e **alcançar certos objetivos**. Pode ser empregado para se referir à política de uma organização, de uma empresa, de um clube, de uma família ou de um grupo social específico. Também pode se referir à **carreira profissional de um político** que busca obter e ampliar sua influência. A dedicação à *politics* envolve regras de jogo específicas (como dinâmica partidária e eleitoral) e um estilo próprio (interesse pelo público e atributos de liderança). |
+| **Policy** | **Ação do Governo (Linha de Conduta)** | É entendido como a **ação do governo**. Constitui uma atividade social que se propõe a assegurar, por meio da coerção física baseada no direito, a **segurança externa e a solidariedade interna** de um território específico, garantindo a ordem e providenciando ações que visam atender às necessidades da sociedade. É executada por uma **autoridade legitimada**, que busca efetuar a **realocação dos recursos escassos** da sociedade. A política, neste sentido, pode ser adjetivada em função de seu campo de atuação ou da especialização da agência governamental (e.g., política de educação, saúde, fiscal). Os produtos dessas ações têm efeitos no sistema político e social. |
